rgbds-0.6.1/test/asm/syntax-error.simple.err
error: syntax-error.asm(2):
    syntax error
error: Assembly aborted (1 error)!
