rgbds-0.6.1/test/asm/syntax-error.asm
; The reported error here depends on Bison's parse.error flag.
print a
